--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -53,10 +53,6 @@
   border: 5px solid #222;
 }
 
-.carousel {
-  height: 100%;
-}
-
-.carousel-inner {
-  height: 76vh;
+.carousel.carousel-slider, .carousel-item {
+  min-height: 76vh;
 }
