--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@ h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
 }
 
 .products {
+  height: 76vh;
   min-height: 76vh;
 }
 
@@ -24,6 +25,7 @@ h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
   position: relative;
   width: 100%;
   height: 33vh;
+  min-height: 33vh;
   overflow: hidden;
   box-shadow: 3px 3px 5px rgba(0,0,0,0.5), -3px 3px 5px rgba(0,0,0,0.5);
 }
@@ -34,6 +36,7 @@ h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
   top: 50%;
   transform: translate(-50%, -50%);
   width: 100%;
+  min-height: 33vh;
 }
 .product .info {
   background-color: rgba(0,0,0,0.8);
@@ -45,11 +48,11 @@ h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
   height: 60px;
 }
 
-.product .info p {
+.product .info h5 {
   color: #fff;
-  font-size: 25px;
   padding: 10px;
   font-family: 'Josefin Slab', serif;
+  margin: 0 auto;
 }
 
 div, h1, h2, h3, h4, a {
@@ -59,4 +62,20 @@ div, h1, h2, h3, h4, a {
 .btn-info {
   background-color: #659DBD !important;
   border-color: #659DBD !important;
+}
+
+.carousel .indicators {
+  bottom: -20px;
+  white-space: nowrap;
+  overflow: scroll;
+}
+
+.carousel .indicators .indicator-item.active {
+  background-color: #333;
+}
+
+.carousel .indicators .indicator-item {
+  background-color: rgba(51, 51, 51, 0.5);
+  height: 12px;
+  width: 12px;
 }
