--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <h1 routerLink="/categories" routerLinkActive="active">Homelegance Furniture</h1>
   <app-search class="search"></app-search>
   <div class="categories center-align">
-    <div class="valign-wrapper">
+    <div class="valign-wrapper" style="width: 90px;">
       <a data-target="slide-out" class="sidenav-trigger"><i class="material-icons small">menu</i></a>
       <p>Categories</p>
     </div>
