--- a/src/app/new-arrivals/new-arrivals.component.html
+++ b/src/app/new-arrivals/new-arrivals.component.html
@@ -1,35 +1,22 @@
-<div class="arrow-wrapper-left" data-slide="prev" data-target="#myCarousel" (click)="previousPage()">
-  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-</div>
-<div class="arrow-wrapper-right" data-slide="next" data-target="#myCarousel" (click)="nextPage()">
-  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-</div>
-
-<div id="myCarousel" class="carousel slide products" data-ride="carousel" data-interval="false" (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner">
-    <div class="item" [class.active]="active(i)" *ngFor="let page of products; let i = index;" id="page{{i}}">
-      <div class="products clearfix">
-        <div class="product col-xs-4" *ngFor="let product of page" (click)="goToDetail(product)">
+<div class="products">
+  <div class="arrow-wrapper-left valign-wrapper" (click)="previousPage()">
+    <i class="material-icons">chevron_left</i>
+  </div>
+  <div class="arrow-wrapper-right" (click)="nextPage()">
+    <i class="material-icons">chevron_right</i>
+  </div>
+  <div class="carousel carousel-slider">
+    <div class="carousel-item" *ngFor="let page of products; let i = index;" id="page{{i}}">
+      <div *ngIf="shouldDisplay(i)" class="row">
+        <div class="product col s4" *ngFor="let product of page" (click)="goToDetail(product)">
           <div class="image-wrapper">
             <img *ngIf="product['thumbnail']" src="{{product['thumbnail']}}" alt="" class="product-image">
-            <div class="info">
-              <p>{{product["name"]}}</p>
+            <div class="info valign-wrapper">
+              <h5>{{product["name"]}}</h5>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-
-<nav *ngIf="pages > 1" aria-label="Page navigation" class="text-center">
-  <ul class="pagination">
-    <li data-slide="prev" data-target="#myCarousel" (click)="previousPage()">
-      <a><span aria-hidden="true">&laquo;</span></a>
-    </li>
-    <li *ngFor="let page of products; let i = index;" data-target="#myCarousel" [attr.data-slide-to]="i" [class.active]="compare(i + 1)" (click)="setPage(i + 1)"><a>{{i + 1}}</a></li>
-    <li data-slide="next" data-target="#myCarousel" (click)="nextPage()">
-      <a><span aria-hidden="true">&raquo;</span></a>
-    </li>
-  </ul>
-</nav>
+</div>
