--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,14 +1,18 @@
 <div *ngIf="!noProducts">
   <div class="products">
+    <div class="arrow-wrapper-left valign-wrapper" (click)="previousPage()">
+      <i class="material-icons">chevron_left</i>
+    </div>
+    <div class="arrow-wrapper-right" (click)="nextPage()">
+      <i class="material-icons">chevron_right</i>
+    </div>
     <div *ngIf="products.length === pages" class="carousel carousel-slider">
-      <!-- <div class="carousel-fixed-item center">
-      </div> -->
       <div class="carousel-item" *ngFor="let page of products; let i = index;" id="page{{i}}">
         <div *ngIf="shouldDisplay(i)" class="row">
           <div class="product col s4" *ngFor="let product of page" (click)="goToDetail(product)">
             <div class="image-wrapper">
               <img *ngIf="product['thumbnail']" src="{{product['thumbnail']}}" alt="" class="product-image">
-              <div class="info">
+              <div class="info valign-wrapper">
                 <h5>{{product["name"]}}</h5>
               </div>
             </div>
