--- a/src/app/sub-categories/sub-categories.component.html
+++ b/src/app/sub-categories/sub-categories.component.html
@@ -1,35 +1,30 @@
-<div class="products clearfix">
-  <div id="myCarousel" class="carousel slide products" data-ride="carousel" data-interval="false" (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner">
-      <div class="item" [class.active]="active(i)" *ngFor="let page of subCategories; let i = index;" id="page{{i}}">
-        <div routerLink="/{{category}}" *ngIf="pagenumber == 1" class="col-xs-4 product">
+<div class="products">
+  <div class="arrow-wrapper-left valign-wrapper" (click)="previousPage()">
+    <i class="material-icons">chevron_left</i>
+  </div>
+  <div class="arrow-wrapper-right" (click)="nextPage()">
+    <i class="material-icons">chevron_right</i>
+  </div>
+  <div class="carousel carousel-slider">
+    <div class="carousel-item" *ngFor="let page of subCategories; let i = index;" id="page{{i}}">
+      <div class="row">
+        <div routerLink="/{{category}}" *ngIf="i === 0" class="col s4 product">
           <div class="image-wrapper">
             <img src="{{getSubCategoryThumbnails(category)}}" alt="" class="product-image">
-            <div class="info">
-              <p>All</p>
+            <div class="info valign-wrapper">
+              <h5>All</h5>
             </div>
           </div>
         </div>
-        <div class="product col-xs-4" *ngFor="let category of page" routerLink="/products/sub-categories/{{category['id']}}">
+        <div class="product col s4" *ngFor="let category of page" routerLink="/products/sub-categories/{{category['id']}}">
           <div class="image-wrapper">
             <img *ngIf="category['thumbnail']" src="{{category['thumbnail']}}" alt="" class="product-image">
-            <div class="info">
-              <p>{{category["name"]}}</p>
+            <div class="info valign-wrapper">
+              <h5>{{category["name"]}}</h5>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <nav *ngIf="pages > 1" aria-label="Page navigation" class="text-center">
-    <ul class="pagination">
-      <li data-slide="prev" data-target="#myCarousel" (click)="previousPage()">
-        <a><span aria-hidden="true">&laquo;</span></a>
-      </li>
-      <li *ngFor="let page of subCategories; let i = index;" data-target="#myCarousel" [attr.data-slide-to]="i" [class.active]="compare(i + 1)" (click)="setPage(i + 1)"><a>{{i + 1}}</a></li>
-      <li data-slide="next" data-target="#myCarousel" (click)="nextPage()">
-        <a><span aria-hidden="true">&raquo;</span></a>
-      </li>
-    </ul>
-  </nav>
+</div>
