--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
         </ul>
       </div>
     </li>
-    <li routerLink="occasional" class="valign-wrapper" style="padding-left: 16px;">Occasional</li>
+    <li routerLink="occasional" class="valign-wrapper occasional">Occasional</li>
   </ul>
 </ul>
 
