--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4, .h1, .h2, .h3, .h4 {
   margin-bottom: 20px;
   height: 33vh;
   box-sizing: border-box;
+  padding: 0 1% !important;
 }
 
 .image-wrapper {
@@ -80,4 +81,40 @@ div, h1, h2, h3, h4, a {
   background-color: rgba(51, 51, 51, 0.5);
   height: 12px;
   width: 12px;
+}
+
+.arrow-wrapper-right, .arrow-wrapper-left {
+  position: absolute;
+  color: #222;
+  z-index: 2;
+  top: calc(44%) !important;
+  transform: translateY(-50%);
+}
+
+@media screen and (min-width: 2500px) {
+  .carousel .indicators .indicator-item {
+    height: 1vw;
+    width: 1vw;
+    margin: 24px .2vw;
+  }
+
+  .product .info {
+    height: 21%;
+  }
+
+  .product .info h5 {
+    font-size: 2.5rem;
+  }
+}
+
+@media screen and (min-width: 3300px) {
+  .arrow-wrapper-right i, .arrow-wrapper-left i {
+    font-size: 8rem !important;
+    padding: 20px !important;
+    border: 7px solid #222 !important;
+  }
+
+  .product .info h5 {
+    font-size: 4rem;
+  }
 }
