--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,6 +1,6 @@
 
   <div class="col-xs-5 product-image-wrapper">
-    <img src="{{product['thumbnail']}}" class="img-responsive product-image" alt="" data-toggle="modal" data-target="#imageModal">
+    <img *ngIf="product" src="{{product['thumbnail']}}" class="img-responsive product-image" alt="" data-toggle="modal" data-target="#imageModal">
     <!-- <div *ngIf="multipleImages()" id="carousel-example-generic" class="carousel slide" data-interval="0">
       <ol class="carousel-indicators hidden-xs">
           <li [class.active]="active(i)" *ngFor="let image of images; let i = index" data-target="#carousel-example-generic" [attr.data-slide-to]="i"></li>
@@ -35,17 +35,19 @@
       <h2 class="text-center">Pick Your Items</h2>
       <table>
         <tr>
+          <th *ngIf="showSku">Item Number</th>
           <th>Item Description</th>
           <th>Dimensions</th>
           <th>In Stock?</th>
-          <th colspan="2">Price</th>
+          <th colspan="2" *ngIf="showPrices">Price</th>
         </tr>
         <tr *ngFor="let item of productItems">
+          <td *ngIf="showSku">{{item.number}}</td>
           <td>{{item.description}}</td>
           <td>{{item.dimensions}}</td>
           <td [class]="item.canSellClass()">{{item.canSell()}}</td>
-          <td *ngIf="item.price">{{item.price | currency:'USD':true}}</td>
-          <td *ngIf="item.price" class="input-field">
+          <td *ngIf="item.price && showPrices">{{item.price | currency:'USD':true}}</td>
+          <td *ngIf="item.price && showPrices" class="input-field">
             <li class="active" (click)="dropDown($event)">{{item.numberSelected}}</li>
             <ul>
               <li value="0" (click)="selectNumber($event, item)">0</li>
@@ -62,7 +64,7 @@
           </td>
         </tr>
       </table>
-      <h2 id="total">Total: {{total | currency:'USD':true}}</h2>
+      <h2 *ngIf="showPrices" id="total">Total: {{total | currency:'USD':true}}</h2>
     </div>
   </div>
   <div class="clearfix"></div>
