--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -43,7 +43,14 @@
     </td>
   </tr>
 </table>
-<button (click)="update(user)" class="btn-info btn">Update Multipliers</button>
+<h3>Display Settings</h3>
+<div class="checkbox">
+  <label><input type="checkbox" [(ngModel)]="user.showSku" [value]="user.showSku">Show Sku's (individual product page)</label>
+</div>
+<div class="checkbox">
+  <label><input type="checkbox" [(ngModel)]="user.showPrices" [value]="user.showPrices">Show prices</label>
+</div>
+<button (click)="update(user)" class="btn-info btn">Update Settings</button>
 <h3>Customer Product Emails:</h3>
 <table class="table table-bordered">
   <tr>
