--- a/src/app/product-detail/product-detail.component.html
+++ b/src/app/product-detail/product-detail.component.html
@@ -1,6 +1,5 @@
-
   <div class="col-xs-5 product-image-wrapper">
-    <img *ngIf="product" src="{{product['thumbnail']}}" class="img-responsive product-image" alt="" data-toggle="modal" data-target="#imageModal">
+    <img *ngIf="product && product['images']" src="{{product['images'][0]}}" class="img-responsive product-image" alt="" data-toggle="modal" data-target="#imageModal">
     <!-- <div *ngIf="multipleImages()" id="carousel-example-generic" class="carousel slide" data-interval="0">
       <ol class="carousel-indicators hidden-xs">
           <li [class.active]="active(i)" *ngFor="let image of images; let i = index" data-target="#carousel-example-generic" [attr.data-slide-to]="i"></li>
