--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -12,7 +12,7 @@
         <div class="products clearfix">
           <div class="product col-xs-4" *ngFor="let product of page" (click)="goToDetail(product)">
             <div class="image-wrapper">
-              <img *ngIf="product['thumbnail']" src="{{product['thumbnail']}}" alt="" class="product-image">
+              <img *ngIf="product['images'].length > 0" src="{{product['images'][0]}}" alt="" class="product-image">
               <div class="info">
                 <p>{{product["name"]}}</p>
               </div>
